# eventide

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pixi.toml  xmake.lua
.github/workflows/: check-format.yml  cmake.yml  xmake.yml
examples/: CMakeLists.txt
examples/async_basics/: async_basics.cpp
examples/build_system/: compile_graph.h
examples/dump_dot/: dump_dot.cpp
examples/http/: github_avatar_download.cpp  http_showcase.cpp  httpbin_cookie_flow.cpp  openai_responses.cpp  webdav_list.cpp
examples/ipc/: CMakeLists.txt  scripted_roundtrip.cpp  spawn_worker.cpp  stdio_server.cpp
include/eventide/: compiler.h  error.h  frame.h  fs.h  handle.h  loop.h  process.h  request.h  stream.h  sync.h  task.h  udp.h  watcher.h  when.h
include/eventide/async/: async.h  cancellation.h  error.h  fs.h  (+9 more)
include/language/: protocol.h  server.h  transport.h  ts.h
include/reflection/: enum.h  function.h  name.h  struct.h  traits.h  type.h
include/serde/: attrs.h  serde.h  spelling.h
include/zest/: macro.h
scripts/: lsp_codegen.py
src/async/: CMakeLists.txt  acceptor.cpp  awaiter.h  console.cpp  debug.cpp  frame.cpp  fs.cpp  libuv.h  process.cpp  request.cpp  stream.cpp  sync.cpp  udp.cpp  watcher.cpp
src/async/io/: acceptor.cpp  fs.cpp  fs_event.cpp  loop.cpp  request.cpp  stream.cpp  udp.cpp  watcher.cpp
src/async/runtime/: frame.cpp
src/deco/: CMakeLists.txt  runtime.cc  text.cc
src/eventide/: CMakeLists.txt  error.cpp  frame.cpp  fs.cpp  loop.cpp  process.cpp  request.cpp  stream.cpp  udp.cpp  watcher.cpp
src/http/: CMakeLists.txt  execute.cpp  manager.cpp  prepared_request.cpp  request.cpp  response.cpp
src/ipc/: CMakeLists.txt  bincode_codec.cpp  json_codec.cpp  peer.cpp  recording_transport.cpp  transport.cpp
src/ipc/codec/: json.cpp
src/ipc/lsp/: CMakeLists.txt  position.cpp  uri.cpp
src/language/: CMakeLists.txt  position.cpp  server.cpp  transport.cpp  uri.cpp
src/option/: opt_table.cc  option.cc
src/reflection/: CMakeLists.txt
src/serde/: CMakeLists.txt
src/serde/flatbuffers/flex/: deserializer.cpp  serializer.cpp
src/zest/: CMakeLists.txt  runner.cpp
tests/: CMakeLists.txt  main.cpp
tests/async/: build_system_tests.cpp  cancellation_tests.cpp  fs_tests.cpp  process_tests.cpp  stream_tests.cpp  sync_tests.cpp  task_tests.cpp  udp_tests.cpp  watcher_tests.cpp  when_tests.cpp  work_request_tests.cpp
tests/deco/: backend.cc  decl.cc  descriptor.cc  git.cc  runtime.cc  serialize.cc
tests/eventide/: cancellation_tests.cpp  fs_request_tests.cpp  process_tests.cpp  stream_tests.cpp  sync_tests.cpp  task_tests.cpp  udp_tests.cpp  watcher_tests.cpp  when_tests.cpp  work_request_tests.cpp
tests/integration/: CMakeLists.txt  conftest.py  stub_server.cpp  test_errors.py  test_lifecycle.py  test_notifications.py  test_progress.py  test_requests.py  test_transport.py
tests/ipc/: peer_dispatch_tests.cpp  peer_tests.cpp  test_transport.h  transport_tests.cpp
tests/ipc/lsp/: jsonrpc_traits_tests.cpp  uri_tests.cpp
tests/language/: jsonrpc_traits_tests.cpp  position_tests.cpp  server_tests.cpp  uri_tests.cpp
tests/option/: option_tests.cpp
tests/reflection/: name_tests.cpp  struct_tests.cpp
tests/serde/: flatbuffers_schema_tests.cpp  flatbuffers_tests.cpp  roundtrip_suite.h  types.h
tests/serde/bincode/: bincode_torture_tests.cpp
tests/serde/flatbuffers/: flatbuffers_schema_tests.cpp  flatbuffers_tests.cpp  flatbuffers_torture_tests.cpp
tests/serde/json/: simdjson_config_tests.cpp  simdjson_torture_tests.cpp  yyjson_torture_tests.cpp
tests/serde/simdjson/: simdjson_tests.cpp
tests/serde/toml/: toml_torture_tests.cpp
tests/unit/: main.cpp
tests/unit/async/: build_system_tests.cpp  cancellation_tests.cpp  fs_tests.cpp  loop_fixture.h  post_tests.cpp  process_tests.cpp  stream_tests.cpp  sync_tests.cpp  task_tests.cpp  udp_tests.cpp  watcher_tests.cpp  work_request_tests.cpp
tests/unit/codec/bincode/: bincode_tests.cpp  bincode_torture_tests.cpp
tests/unit/codec/content/: dom_tests.cpp  dom_write_tests.cpp  serializer_tests.cpp
tests/unit/codec/flatbuffers/: flatbuffers_behavior_attrs_tests.cpp  flatbuffers_object_tests.cpp  flatbuffers_torture_tests.cpp
tests/unit/codec/json/: simdjson_attrs_tests.cpp  simdjson_config_tests.cpp  simdjson_error_message_tests.cpp  simdjson_tagged_variant_tests.cpp  simdjson_tests.cpp  simdjson_torture_tests.cpp  simdjson_variant_detail_tests.cpp
tests/unit/codec/toml/: toml_error_message_tests.cpp  toml_tests.cpp  toml_torture_tests.cpp
tests/unit/common/: cow_string_tests.cpp  fd_helpers.h  functional.cpp  small_vector_tests.cpp
tests/unit/deco/: backend.cc  decl.cc  descriptor.cc  runtime.cc  serialize.cc
tests/unit/http/: http_tests.cpp
tests/unit/ipc/: codec_tests.cpp  peer_cancel_tests.cpp  peer_lifecycle_tests.cpp  peer_logger_tests.cpp  peer_test_types.h  peer_tests.cpp  test_transport.h  transport_tests.cpp
tests/unit/ipc/lsp/: jsonrpc_traits_tests.cpp  position_tests.cpp  progress_tests.cpp
tests/unit/meta/schema/: recursive_fields_tests.cpp
tests/unit/option/: option_tests.cpp
tests/unit/reflection/: compare_tests.cpp  enum_tests.cpp  name_tests.cpp  struct_tests.cpp
tests/unit/reflection/schema/: behavior_attrs_tests.cpp  kind_of_tests.cpp  rename_all_tests.cpp  schema_attrs_tests.cpp  slots_tests.cpp  type_info_tests.cpp
tests/unit/serde/: standard_case_suite.h
tests/unit/serde/bincode/: bincode_tests.cpp  bincode_torture_tests.cpp
tests/unit/serde/content/: dom_tests.cpp  dom_write_tests.cpp  serializer_tests.cpp  yyjson_torture_tests.cpp
tests/unit/serde/flatbuffers/: flatbuffers_object_tests.cpp  flatbuffers_schema_tests.cpp  flatbuffers_torture_tests.cpp
tests/unit/serde/json/: simdjson_attrs_tests.cpp  simdjson_config_tests.cpp  simdjson_error_message_tests.cpp  simdjson_tagged_variant_tests.cpp  simdjson_tests.cpp  simdjson_torture_tests.cpp  simdjson_variant_detail_tests.cpp
tests/unit/serde/toml/: toml_error_message_tests.cpp  toml_tests.cpp  toml_torture_tests.cpp
tests/unit/zest/: check_tests.cpp
(+190 files in other folders)
